# AjaRS

./: Cargo.toml  README.md  publish_all.sh  rustfmt.toml
.github/workflows/: build_and_test.yml
ajars/: Cargo.toml
ajars/src/: lib.rs
ajars/src/actix_web/: mod.rs
ajars/tests/: actix_web_it.rs
ajars_actix_web/: Cargo.toml
ajars_actix_web/src/: attempt.rs  lib.rs
ajars_axum/: Cargo.toml
ajars_axum/src/: attempt.rs  lib.rs
ajars_client_reqwest/: Cargo.toml
ajars_client_reqwest/src/: lib.rs
ajars_client_surf/: Cargo.toml
ajars_client_surf/src/: lib.rs
ajars_client_web/: Cargo.toml
ajars_client_web/src/: error.rs  lib.rs
ajars_core/: Cargo.toml
ajars_core/src/: lib.rs
ajars_reqwest/: Cargo.toml
ajars_reqwest/src/: lib.rs
ajars_reqwest/tests/: actix_web_it.rs
ajars_server_actix_web/: Cargo.toml
ajars_server_actix_web/src/: lib.rs
ajars_server_axum/: Cargo.toml
ajars_server_axum/src/: lib.rs
ajars_surf/: Cargo.toml
ajars_surf/src/: lib.rs
ajars_surf/tests/: actix_web_it.rs
ajars_test/: Cargo.toml
ajars_test/src/: actix_web.rs  api.rs  axum.rs  error.rs  lib.rs
ajars_test/tests/: actix_web_reqwest_it.rs  actix_web_surf_it.rs  axum_reqwest_it.rs  axum_surf_it.rs
ajars_warp/: Cargo.toml
ajars_warp/src/: lib.rs
ajars_web/: Cargo.toml
ajars_web/src/: error.rs  lib.rs
ajars_web_sys/: Cargo.toml
ajars_web_sys/src/: error.rs  lib.rs
ajars_websys/: Cargo.toml
examples/ajars_common/: Cargo.toml
examples/ajars_common/src/: hello.rs  lib.rs  ping.rs
examples/client_reqwest/: Cargo.toml
examples/client_reqwest/src/: main.rs
examples/client_surf/: Cargo.toml
examples/client_surf/src/: main.rs
examples/client_web_yew/: Cargo.toml  README.md  index.html
examples/client_web_yew/src/: main.rs
examples/examples_common/: Cargo.toml
examples/examples_common/src/: hello.rs
examples/server_actix_web/: Cargo.toml
examples/server_actix_web/src/: main.rs
examples/server_axum/: Cargo.toml
examples/server_axum/src/: main.rs
examples/web_yew_reqwest/: Cargo.toml  README.md
examples/web_yew_reqwest/src/: main.rs
examples/web_yew_surf/: Cargo.toml  README.md
examples/web_yew_surf/src/: main.rs
examples/web_yew_web_sys/: Cargo.toml  Trunk.toml
examples/web_yew_web_sys/src/: main.rs
scripts/: publish_all.sh  test.sh  test_all.sh
src/: lib.rs
src/actix_web/: mod.rs
src/reqwest/: mod.rs
src/surf/: mod.rs
tests/: actix_web_it.rs  integration_tests.rs
