[package]
name = "ajars"
version = "0.6.1"
edition = "2018"
license = "MIT"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "AjaRS"
readme = "./README.md"
homepage = "https://github.com/ufoscout/AjaRS"
repository = "https://github.com/ufoscout/AjaRS"
documentation = "https://docs.rs/ajars"
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ajars_actix_web = { path = "./ajars_actix_web", version = "0.6.1", optional = true }
ajars_axum = { path = "./ajars_axum", version = "0.6.1", optional = true }
ajars_core = { path = "./ajars_core", version = "0.6.1" }
ajars_reqwest = { path = "./ajars_reqwest", version = "0.6.1", optional = true }
ajars_surf = { path = "./ajars_surf", version = "0.6.1", optional = true }
ajars_web = { path = "./ajars_web", version = "0.6.1", optional = true }

[dev-dependencies]
derive_more = "0.99"
serde = "1"
surf_ext = { package = "surf", version = "2.3" }

[features]
actix_web = ["ajars_actix_web"]
axum = ["ajars_axum"]
reqwest = ["ajars_reqwest"]
surf = ["ajars_surf"]
web = ["ajars_web"]


[workspace]

members = [
    "ajars_core",
    "ajars_test",
    "ajars_actix_web",
    "ajars_axum",
    "ajars_reqwest",
    "ajars_surf",
    "ajars_web",
    "examples/client_reqwest",
    "examples/client_surf",
    "examples/client_web_yew",
    "examples/server_actix_web",
] 

