[package]
name = "ajars"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ajars_actix_web = { workspace = true, optional = true }
ajars_axum = { workspace = true, optional = true }
ajars_core = { workspace = true }
ajars_reqwest = { workspace = true, optional = true }
ajars_surf = { workspace = true, optional = true }
ajars_web = { workspace = true, optional = true }

[dev-dependencies]
derive_more = { workspace = true }
serde = { workspace = true }
surf = { workspace = true }

[features]
actix_web = ["ajars_actix_web"]
axum = ["ajars_axum"]
reqwest = ["ajars_reqwest"]
surf = ["ajars_surf"]
web = ["ajars_web"]


[workspace]

members = [
    "ajars_core",
    "ajars_test",
    "ajars_actix_web",
    "ajars_axum",
    "ajars_reqwest",
    "ajars_surf",
    "ajars_web",
    "examples/*",
] 

resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2018"
license = "MIT"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "AjaRS"
readme = "../README.md"
homepage = "https://github.com/ufoscout/AjaRS"
repository = "https://github.com/ufoscout/AjaRS"
documentation = "https://docs.rs/ajars"
keywords = []

[workspace.dependencies]
ajars = { path = ".", version = "0.9.0" }
ajars_actix_web = { path = "./ajars_actix_web", version = "0.9.0" }
ajars_axum = { path = "./ajars_axum", version = "0.9.0" }
ajars_core = { path = "./ajars_core", version = "0.9.0" }
ajars_reqwest = { path = "./ajars_reqwest", version = "0.9.0" }
ajars_surf = { path = "./ajars_surf", version = "0.9.0" }
ajars_web = { path = "./ajars_web", version = "0.9.0" }
examples_common = { path = "./examples/examples_common", version = "0.9.0" }

chrono = { version = "0.4", default-features = false }
derive_more = "0.99"
port_check = "0.1"
rand = "0.8"
serde = { version = "1", default-features = false }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", default-features = false }

# Ajax Client Reqwest
http = { version = "0.2", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["json"] }

# Ajax Client Surf
surf = { version = "2.3" }

# Ajax Client Web
serde-wasm-bindgen = "0.4"
serde_urlencoded = "0.7"
gloo-net = { version = "0.2", default-features = false, features = ["http", "json"] }
wasm-bindgen = { version = "0.2", default-features = false }
wasm-bindgen-futures = { version = "0.4", default-features = false }
wasm-bindgen-test = { version = "0.3", default-features = false }
web-sys ={ version = "0.3", default-features = false }

# Ajax Server Axum
axum = { version = "0.6", features = ["json", "query"] }
hyper = "0.14"
tower = "0.4"

# Ajax Server Actix Web
actix-rt = "2"
actix-web = "4.0"
futures-util = "0.3"

# Ajax Examples Client Web Yew
yew = { version = "0.20", features = ["csr"] }
wee_alloc = "0.4.5"
