[package]
name = "ajars"
version = "0.3.0"
edition = "2018"
license = "MIT"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "AjaRS"
readme = "../README.md"
homepage = "https://github.com/ufoscout/AjaRS"
repository = "https://github.com/ufoscout/AjaRS"
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ajars_actix_web = { path = "../ajars_actix_web", version = "0.3.0", optional = true }
ajars_core = { path = "../ajars_core", version = "0.3.0" }
ajars_reqwest = { path = "../ajars_reqwest", version = "0.3.0", optional = true }
ajars_surf = { path = "../ajars_surf", version = "0.3.0", optional = true }
ajars_web = { path = "../ajars_web", version = "0.3.0", optional = true }

[dev-dependencies]
actix-rt = "2"
port_check = "0.1"
rand = "0.8"
serde = "1"
surf_lib = { package = "surf", version = "2.2" }

[features]
actix_web = ["ajars_actix_web"]
reqwest = ["ajars_reqwest"]
surf = ["ajars_surf"]
web = ["ajars_web"]
