[package]
name = "ajars_axum"
version = "0.4.0"
edition = "2018"
license = "MIT"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "AjaRS"
readme = "../README.md"
homepage = "https://github.com/ufoscout/AjaRS"
repository = "https://github.com/ufoscout/AjaRS"
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.1.1", default-features = false }
ajars_core = { path = "../ajars_core", version = "0.4.0" }
serde = { version = "1", default-features = false }
#tower-service = "0.3"
http = "0.2"


[dev-dependencies]
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
