[package]
name = "ajars_axum"
version = "0.7.0"
edition = "2018"
license = "MIT"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "AjaRS"
readme = "../README.md"
homepage = "https://github.com/ufoscout/AjaRS"
repository = "https://github.com/ufoscout/AjaRS"
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", default-features = false, features = ["json", "query"] }
ajars_core = { path = "../ajars_core", version = "0.7.0" }
serde = { version = "1", default-features = false }

[dev-dependencies]
hyper = "0.14"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
