[package]
name = "ajars_client_reqwest"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ajars_core = { workspace = true }
http = { workspace = true, default-features = false }
reqwest = { workspace = true, default-features = false }
serde = { workspace = true }
