[package]
name = "ajars_client_web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ajars_core = { workspace = true }
gloo-net = { workspace = true }
gloo-utils = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_urlencoded = { workspace = true }
thiserror = { workspace = true }

[dependencies.web-sys]
workspace = true
features = [
#   'Headers',
#   'Request',
#   'RequestInit',
  'RequestMode',
#   'Response',
#   'Window',
]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }