[package]
name = "ajars_reqwest"
version = "0.1.0"
edition = "2018"
license = "MIT"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "AjaRS"
readme = "README.md"
homepage = "https://github.com/ufoscout/AjaRS"
repository = "https://github.com/ufoscout/AjaRS"
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ajars_core = { path = "../ajars_core", version = "0.2.0" }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = "1"

[dev-dependencies]
actix-rt = "2"
actix-web = { version = "4.0.0-beta.8", default-features = false }
ajars_actix_web = { path = "../ajars_actix_web", version = "0.2.0" }
port_check = "0.1"
rand = "0.8"
tokio = { version = "1", features = ["full"]}
