[package]
name = "ajars_reqwest"
version = "0.6.2"
edition = "2018"
license = "MIT"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "AjaRS"
readme = "../README.md"
homepage = "https://github.com/ufoscout/AjaRS"
repository = "https://github.com/ufoscout/AjaRS"
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ajars_core = { path = "../ajars_core", version = "0.6.2" }
http = {version = "0.2", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = {version = "1", default-features = false }
