[package]
name = "ajars_server_actix_web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ajars_core = { workspace = true }

actix-web = { workspace = true, default-features = false}
futures-util = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
actix-rt = { workspace = true }
rand = { workspace = true }