[package]
name = "ajars_server_axum"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, default-features = false }
ajars_core = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
