[package]
name = "ajars_surf"
version = "0.4.0"
edition = "2018"
license = "MIT"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "AjaRS"
readme = "../README.md"
homepage = "https://github.com/ufoscout/AjaRS"
repository = "https://github.com/ufoscout/AjaRS"
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ajars_core = { path = "../ajars_core", version = "0.4.0" }
serde = {version = "1", default-features = false }
surf = { version = "2.2", default-features = false }
