[package]
name = "ajars_test"
version = "0.5.0"
edition = "2018"
license = "MIT"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "AjaRS"
readme = "../README.md"
homepage = "https://github.com/ufoscout/AjaRS"
repository = "https://github.com/ufoscout/AjaRS"
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ajars = { path = "../ajars", version = "0.5.0", features = ["actix_web", "axum", "reqwest", "surf"] }
ajars_core = { path = "../ajars_core", version = "0.5.0" }
actix-rt = "2"
port_check = "0.1"
rand = "0.8"
serde =  { version = "1.0", features = ["derive"] }
surf_lib = { package = "surf", version = "2.2" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
