[package]
name = "ajars_test"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ajars = { workspace = true, features = ["actix_web", "axum", "reqwest", "surf"] }
ajars_core = { workspace = true }
actix-rt = "2"
axum = { workspace = true }
port_check = { workspace = true }
rand = { workspace = true }
serde =  { workspace = true, features = ["derive"] }
surf = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
