[package]
name = "client_reqwest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ajars = { path = "../..", features = ["reqwest"] }
examples_common = { path = "../examples_common" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }