[package]
name = "example_client_reqwest"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ajars = { workspace = true, features = ["reqwest"] }
examples_common = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }