[package]
name = "client_surf"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ajars = { workspace = true , features = ["surf"] }
examples_common = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
