[package]
name = "example_client_web_yew"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ajars = { workspace = true, features = ["web"] }
examples_common = { workspace = true }
yew = { workspace = true }
wee_alloc = { workspace = true }

# [profile.release]
# # less code to include into binary
# panic = 'abort' 
# # optimization over all codebase ( better optimization, slower build )
# codegen-units = 1
# # optimization for size ( more aggressive )
# opt-level = 'z' 
# # optimization for size 
# # opt-level = 's' 
# # link time optimization using using whole-program analysis
# lto = true
