[package]
name = "examples_common"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ajars = { workspace = true }
serde =  { workspace = true, features = ["derive"] }