[package]
name = "server_actix_web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.12", default-features = false }
ajars = { path = "../..", features = ["actix_web"] }
ajars_common = { path = "../ajars_common" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }