[package]
name = "server_actix_web"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
ajars = { workspace = true, features = ["actix_web"] }
examples_common = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
