[package]
name = "example_server_axum"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
ajars = { workspace = true, features = ["axum"] }
examples_common = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }