[package]
name = "web_yew_surf"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ajars = { path = "../../ajars", features = ["surf"] }
ajars_common = { path = "../ajars_common" }

# Needed by surf. See: https://github.com/http-rs/surf/issues/315
getrandom = { version = "0.2", default-features = false, features = ["js"] }
surf = { version = "2.2", default-features = false, features = ["wasm-client"] }
yew = "0.18"
yewtil = { version = "0.4", default-features = false, features = ["future"] }