[package]
name = "web_yew_web_sys"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ajars = { path = "../../ajars", features = ["web_sys"] }
ajars_common = { path = "../ajars_common" }
yew = "0.18"
yewtil = { version = "0.4", default-features = false, features = ["future"] }